electoral/app.css
html {
  background-color: #0a0a0a;
}

body {
  width: 900px;
  margin: 40px auto 0;
  text-align: center;
  font-family: 'Helvetica Neue', sans-serif;
  position: relative;
  color: #dcdcdc;
}

h1 {
  color: #dcdcdc;
}

button#simulate {
  border: 2px solid #5b5b5b;
  background-color: #efefef;
  padding: 10px 20px;
  text-transform: uppercase;
  color: #262626;
  cursor: pointer;
  border-radius: 3px;
  outline: none;
  position: absolute;
  right: 15px;
  top: 77px;
}

button#simulate:hover {
  background-color: #bcbcbc;
}

#vote-tally {
  position: absolute;
  top: 117px;
  right: 20px;
  text-align: right;
}

#instructions {
  position: absolute;
  top: 601px;
  left: 8px;
  font-size: 0.75em;
  text-align: left;
}

#instructions strong {
  font-size: 11px;
}

.yea-label {
  color: #04a904;
  margin-top: 8px;
  margin-bottom: 0;
}

.nay-label {
  margin-top: 5px;
  color: #d62728;
}

#outcome {
  font-weight: bold;
}

#outcome.yea {
  color: #04a904;
}

#outcome.nay {
  color: #d62728;
}

.arrow {
  fill: #999;
}

.link {
  fill: none;
  stroke: #999;
  stroke-width: 1.5px;
  opacity: .1;
}

.link.isDelegated {
  opacity: 1;
}

.vote.yea {
  fill: #04a904;
}

.vote.nay {
  fill: #d62728;
}

svg {
  border: 1px solid grey;
  border-radius: 3px;
  background-color: #232323;
}

circle {
  fill: #757575;
  stroke: #232323;
  stroke-width: 1.5px;
  cursor: pointer;
}

text {
  font: 10px sans-serif;
  pointer-events: none;
}

footer {
  color: #888;
  font-size: 12px;
  left: 332px;
  position: absolute;
  top: 698px;
  text-align: center;
  width: 200px;
}

footer a {
  opacity: .5;
  color: aqua;
}

footer a:hover {
  opacity: 1;
}

